make all tests pass w/ autogenerated layers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -331,6 +331,13 @@ export(keras_model_custom)
 export(keras_model_sequential)
 export(layer_abstract_rnn_cell)
 export(layer_activation)
+export(layer_activation_elu)
+export(layer_activation_leaky_relu)
+export(layer_activation_parametric_relu)
+export(layer_activation_relu)
+export(layer_activation_selu)
+export(layer_activation_softmax)
+export(layer_activation_thresholded_relu)
 export(layer_activity_regularization)
 export(layer_add)
 export(layer_additive_attention)
@@ -365,7 +372,6 @@ export(layer_discretization)
 export(layer_dot)
 export(layer_dropout)
 export(layer_einsum_dense)
-export(layer_elu)
 export(layer_embedding)
 export(layer_flatten)
 export(layer_gaussian_dropout)
@@ -387,7 +393,6 @@ export(layer_input_layer)
 export(layer_integer_lookup)
 export(layer_lambda)
 export(layer_layer_normalization)
-export(layer_leaky_relu)
 export(layer_locally_connected_1d)
 export(layer_locally_connected_2d)
 export(layer_lstm)
@@ -401,7 +406,6 @@ export(layer_minimum)
 export(layer_multi_head_attention)
 export(layer_multiply)
 export(layer_normalization)
-export(layer_p_relu)
 export(layer_permute)
 export(layer_random_brightness)
 export(layer_random_contrast)
@@ -412,7 +416,6 @@ export(layer_random_rotation)
 export(layer_random_translation)
 export(layer_random_width)
 export(layer_random_zoom)
-export(layer_relu)
 export(layer_repeat_vector)
 export(layer_rescaling)
 export(layer_reshape)
@@ -422,7 +425,6 @@ export(layer_separable_conv_1d)
 export(layer_separable_conv_2d)
 export(layer_simple_rnn)
 export(layer_simple_rnn_cell)
-export(layer_softmax)
 export(layer_spatial_dropout_1d)
 export(layer_spatial_dropout_2d)
 export(layer_spatial_dropout_3d)
@@ -431,12 +433,11 @@ export(layer_stacked_rnn_cells)
 export(layer_string_lookup)
 export(layer_subtract)
 export(layer_text_vectorization)
-export(layer_thresholded_relu)
 export(layer_time_distributed)
 export(layer_unit_normalization)
-export(layer_up_sampling_1d)
-export(layer_up_sampling_2d)
-export(layer_up_sampling_3d)
+export(layer_upsampling_1d)
+export(layer_upsampling_2d)
+export(layer_upsampling_3d)
 export(layer_wrapper)
 export(layer_zero_padding_1d)
 export(layer_zero_padding_2d)
